--- a/Client/Views/AdminHome/Index.cshtml
+++ b/Client/Views/AdminHome/Index.cshtml
@@ -2,8 +2,10 @@
     ViewData["Title"] = "Home";
     Layout = "_ViewGeneralAdmin";
 }
-<div class="card" style = "height : 200px;">
+<div class="card" style = "height : auto;">
     <div class="text-center" style="margin:auto;">
-        <h1 class="display-4"><b>CONTROLLER WEBSIDE</b></h1>
+         <img src="https://drive.google.com/uc?export=view&id=1PRI-khOq2Toj1M0KBl-B8NCK1e2GxVe7"  width="300" height="300"> <h1 class="display-4"> 
+             <br>
+             <b>CODEMY CONTROLLER</b></h1>
     </div>
 </div>
