--- a/Client/Views/ClassAdmin/DataPembayaran.cshtml
+++ b/Client/Views/ClassAdmin/DataPembayaran.cshtml
@@ -9,13 +9,15 @@
 </head>
 <body class="hold-transition sidebar-mini layout-fixed" style="background-color: #f4f6f9;">
     <content>
-        <table class="table table-striped table-hover table-bordered" id="">
+        <table class="table table-striped table-hover table-bordered" id="table4">
             <caption>Data Pembayaran</caption>
             <thead class="table-dark">
                 <tr>
                     <td>No</td>
+                    <td>Name</td>
+                    <td>Class</td>
                     <td>Order Id</td>
-                    <td>Status</td>
+                    <td>isPaid</td>
                 </tr>
             </thead>
             <tbody>
@@ -24,4 +26,3 @@
     </content>
 </body>
 </html>
-
