--- a/Client/Views/ClassAdmin/Index.cshtml
+++ b/Client/Views/ClassAdmin/Index.cshtml
@@ -11,13 +11,13 @@
                 <tr>
                     <td>No</td>
                     <td>Email</td>
-                    <td>First Name</td>
-                    <td>Last Name</td>
+                    <td>Name</td>
                     <td>Gender</td>
-                    <td>Phone</td>
                     <td>BirthDate</td>
-                    <td>Education</td>
+                    <td>Phone</td>
                     <td>Address</td>
+                    <td>University</td>
+                    <td>Major</td>
                 </tr>
             </thead>
             <tbody>
@@ -25,4 +25,3 @@
         </table>
     </content>
 </body>
-
