--- a/Client/Views/ClassAdmin/TableClass.cshtml
+++ b/Client/Views/ClassAdmin/TableClass.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
     Layout = "_ViewGeneralAdmin";
 }
 
@@ -9,11 +10,14 @@
             <thead class="table-dark">
                 <tr>
                     <td>No</td>
-                    <td>Judul</td>
-                    <td>Desc</td>
+                    <td>Class Name</td>
+                    <td>Description</td>
                     <td>TotalChapter</td>
                     <td>Price</td>
                     <td>Rating</td>
+                    <td>Level</td>
+                    <td>Category</td>
+                    <td>Participant</td>
                     <td>Action</td>
                 </tr>
             </thead>
@@ -28,17 +32,14 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Detail Class</h5>
+                <h5 class="modal-title"> <span class="bi bi-newspaper">  Detail Class</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <form action="" style="position : relative; width: auto; margin : auto;" class="" id="form-class">
-
-                    
                 </form>
-                
             </div>
         </div>
     </div>
