--- a/Client/Views/Shared/_Layout.cshtml
+++ b/Client/Views/Shared/_Layout.cshtml
@@ -87,6 +87,7 @@
                                     <div class="invalid-feedback">
                                         Mohon Isi Email
                                     </div>
+                                    <p id="errorMessageLoginEmail" style="color:red;" hidden>Email Tidak Ada Di Database!!</p>
                                 </div>
                                 <div class="form-group mb-3">
                                     <label for="LogPass">Password</label>
@@ -94,6 +95,7 @@
                                     <div class="invalid-feedback">
                                         Mohon Isi Password
                                     </div>
+                                    <p id="errorMessageLoginPassword" style="color:red;" hidden>Password Salah!!</p>
                                     <small><a href="#forgotPass1Modal" class="text-dark font-italic" data-target="#forgotPass1Modal" data-toggle="modal" data-dismiss="modal">Lupa password?</a></small>
                                 </div>
                                 <div class="text-right">
